* Minor z-index fix for application-panel__actions element

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-panel.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-panel.scss
@@ -123,7 +123,7 @@
   position: fixed;
   right: 0;
   top: $navbar-mobile-height;
-  z-index: 98;
+  z-index: 2;
 
   @include breakpoint($breakpoint-pad) {
     align-items: center;
